Tested database read/write. Corrected typo in index.html.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>HELLO, PEOPLE!</h1>
     <p>Here we are going to make a "Let's Play!" site.</p>
-    <p>At the moment There are {{ n_of_users }} registered users!</p>
+    <p>At the moment there are {{ n_of_users }} registered users!</p>
     <p>Great job! :-)</p>
 </body>
 </html>
