--- a/Templates/public/template/base.html
+++ b/Templates/public/template/base.html
@@ -21,6 +21,9 @@
   <!-- Custom styles for this template -->
   <link href="{{url_for('static', filename='css/one-page-wonder.min.css')}}" rel="stylesheet">
 
+  <!-- Main CSS -->
+  <link href="{{url_for('static', filename='css/style.css')}}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -28,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/logo.png')}}" alt="let's play logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
