Add home page banner and styling

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -1,6 +1,20 @@
 {% extends 'public/template/base.html' %}
 
-{% block title %} Let's Play | Home {% endblock %}
+{% block title %}Let's Play | Home {% endblock %}
+
+{% block header %}
+
+<header class="home-banner text-center text-white">	
+  <div class="home-banner-content">	
+    <div class="container">	
+      <h1 class="masthead-heading mb-0">Let's Play</h1>	
+      <h2 class="masthead-subheading mb-0">Be Creative and Have Fun!</h2>	
+      <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>	
+    </div>	
+  </div>	
+</header>	
+
+{% endblock %}
 
 {% block content %}
 <section>
