Change banned color to rgba

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,5 @@
 }
 
 .home-banner-content {
-    background-color: #929191;
-    opacity: 0.7;
+    background-color: rgba(146, 145, 145, 0.6);
 }
