--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -8,10 +8,10 @@
   <meta name="description" content="">	
   <meta name="author" content="">	
 
-  <title>{% block title %} {% endblock %}</title>	
+  <title>{% block title %}{% endblock %}</title>	
 
   <!-- Bootstrap core CSS -->	
-  <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">	
+  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">	
 
   <!-- Custom fonts for this template -->	
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">	
@@ -19,10 +19,10 @@
     rel="stylesheet">	
 
   <!-- Custom styles for this template -->	
-  <link href="{{url_for('static', filename='css/one-page-wonder.min.css')}}" rel="stylesheet">	
+  <link href="{{ url_for('static', filename='css/one-page-wonder.min.css') }}" rel="stylesheet">	
 
   <!-- Main CSS -->	
-  <link href="{{url_for('static', filename='css/style.css')}}" rel="stylesheet">	
+  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">	
 
 </head>	
 
@@ -31,7 +31,7 @@
   <!-- Navigation -->	
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">	
     <div class="container">	
-      <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/logo.png')}}" alt="let's play logo"></a>	
+      <a class="navbar-brand" href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="let's play logo"></a>	
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"	
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">	
         <span class="navbar-toggler-icon"></span>	
@@ -39,10 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">	
         <ul class="navbar-nav ml-auto">	
           <li class="nav-item">	
-            <a class="nav-link" href="#">Sign Up</a>	
+            <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>	
           </li>	
           <li class="nav-item">	
-            <a class="nav-link" href="#">Log In</a>	
+            <a class="nav-link" href="{{ url_for('login') }}">Log In</a>	
           </li>	
         </ul>	
       </div>	
@@ -65,8 +65,8 @@
   </footer>	
 
   <!-- Bootstrap core JavaScript -->	
-  <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>	
-  <script src="{{url_for('static', filename='js/bootstrap.bundle.min.js')}}"></script>	
+  <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>	
+  <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>	
 
 </body>	
 
