--- a/templates/public/login.html
+++ b/templates/public/login.html
@@ -62,7 +62,8 @@
         <!-- button to submit form -->  
         <div class="row">
             <div class="col-md-12">
-                <button class="btn black btn-bg waves-effect waves-light" type="submit" name="action">Login
+                <button class="btn black btn-bg waves-effect waves-light" type="submit" name="action">
+                    Login
                     <i class="material-icons right">exit_to_app</i>
                 </button>
             </div>
