--- a/templates/public/register.html
+++ b/templates/public/register.html
@@ -29,15 +29,29 @@
             <div class="row">
                 <div class="input-field text-center font-color col s6">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="username" name='username' type="text" class="validate font-color" placeholder="username" required>
+                    <input id="username" name="username" type="text" class="validate font-color" placeholder="Username" required>
 
-                        <!-- messages are not defined at this point!!!
-                            {% for message in messages %} 
-                                <h5 class="font3">
-                                {{ message }}                                                                
-                                </h5>
-                            {% endfor %}
-                        -->
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <div class="flashes">
+
+                                {% for message in messages %} 
+                                    <strong class="flash-color">
+                                        {{ message }}                                                                
+                                    </strong>
+                                {% endfor %}
+
+                            </div>
+                        {% endif %}
+                    {% endwith %}
+
+                    <!-- messages are not defined at this point!!!
+                        {% for message in messages %} 
+                            <h5 class="font3">
+                            {{ message }}                                                                
+                            </h5>
+                        {% endfor %}
+                    -->
  
                 </div>
             </div>
@@ -51,14 +65,15 @@
 
             <div class="row">
                 <div class="col s6 ">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Sign Up
-                    <i class="material-icons right">exit_to_app</i>
+                    <button class="btn waves-effect waves-light" type="submit" name="action">
+                        Sign Up
+                        <i class="material-icons right">exit_to_app</i>
                     </button>
                 </div>
             </div>
 
             <div>
-                <a style="text-decoration: none; color: black;" class="font-color link-text" href="{{url_for('index')}}">
+                <a style="text-decoration: none; color: black;" class="font-color link-text" href="{{url_for('login')}}">
                     <strong>Have an account? Please log in</strong>
                 </a>
             </div>
