--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,8 +6,7 @@
     background-color: #929191;
 }
 
-.home-banner {
-    background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1593956194/Hackathon/INdex/4k-wallpaper-adorable-blur-boy-1148998_1_1_1_1_khf2uw.jpg");
+.banner-settings {
     position: relative;
     overflow: hidden;
     padding-top: calc(7rem + 72px);
@@ -18,6 +17,14 @@
     background-size: cover;
 }
 
+.home-banner {
+    background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1593956194/Hackathon/INdex/4k-wallpaper-adorable-blur-boy-1148998_1_1_1_1_khf2uw.jpg");
+}
+
 .home-banner-content {
     background-color: rgba(146, 145, 145, 0.6);
+}
+
+.login-banner {
+    background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594023556/Hackathon/INdex/photo-of-kids-jumping-together-3311695_1_1_jftkr0.jpg");
 }
