Update banner class

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 
-<header class="home-banner text-center text-white">	
+<header class="home-banner banner-settings text-center text-white">	
   <div class="home-banner-content">	
     <div class="container">	
       <h1 class="masthead-heading mb-0">Let's Play</h1>	
