--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -30,7 +30,7 @@
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">
                 <img src="{{ url_for('static', filename='img/logo.png') }}" alt="let's play logo">
@@ -52,7 +52,7 @@
                 {% else %}
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('activities_proposed') }}">Activities for you</a>
@@ -81,7 +81,7 @@
 </main>	
 
   <!-- Footer -->	
-  <footer class="py-5 bg-black">	
+  <footer class="py-5 bg-black footer">	
     <div class="container">	
       <p class="m-0 text-center text-white small">Copyright &copy; Let's Play 2020</p>	
     </div>	
