--- a/templates/public/activities_proposed.html
+++ b/templates/public/activities_proposed.html
@@ -5,7 +5,7 @@
 {% block header %}
 
 <header class="home-banner text-center text-white">
-  <div class="home-banner-content">
+  <div class="banner-content">
     <div class="container">
       <h1 class="masthead-heading mb-0">ACTIVITIES</h1>
     </div>
