--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -5,7 +5,7 @@
 {% block header %}
 
 <header class="home-banner banner-settings text-center text-white">	
-  <div class="home-banner-content">	
+  <div class="banner-content">	
     <div class="container">	
       <h1 class="masthead-heading mb-0">Let's Play</h1>	
       <h2 class="masthead-subheading mb-0">Be Creative and Have Fun!</h2>	
