--- a/templates/public/register.html
+++ b/templates/public/register.html
@@ -1,87 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />   
-    <title>Caribbean Recipes</title>
-</head>
-<body class="bg-image">
-    
-    <div class="container col s4 offset-s8"><span class="flow-text"></span>
+{% extends 'public/base.html' %}
 
-        <form action="{{ url_for('register') }}" method="POST" class="col s12 m6 center-align">
+{% block title%}Let's Play | Register{% endblock %}
 
-            <a id="link-text" href="{{ url_for('index') }}" style="text-decoration: none; color: white;">
-                <h1 class="font-color">
-                    Caribbean Recipes (This is strange. /Pasha)
-                </h1>
-            </a>
+{% block header %}
 
-            <h4 class="font-color">Register</h4>
+<header class="register-banner banner-settings text-center text-white">	
+    <div class="banner-content">	
+      <div class="container-fluid">	
+        <h1 class="masthead-heading mb-0">Let's Play</h1>	
+        <h2 class="masthead-subheading mb-0">Be Creative and Have Fun!</h2>	
+        <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>	
+      </div>	
+    </div>	
+  </header>	
 
+{% endblock %}
+
+{% block content %}
+
+<div class="row no-gutters login-image b-image d-flex justify-content-center">
+    <div class="col-12 col-lg-3 text-center">
+        <div class="container-fluid center-form">
+            <div class="header">
+                <h1>Login</h1>
+            </div>
             <div class="row">
-                <div class="input-field text-center font-color col s6">
-                    <i class="material-icons prefix">account_circle</i>
-                    <input id="username" name="username" type="text" class="validate font-color" placeholder="Username" required>
-
-                    {% with messages = get_flashed_messages() %}
-                        {% if messages %}
-                            <div class="flashes">
-
-                                {% for message in messages %} 
-                                    <strong class="flash-color">
-                                        {{ message }}                                                                
-                                    </strong>
-                                {% endfor %}
-
+                <div class="col-12 d-flex justify-content-center text-sm-center text-lg-left">
+                    <form action="{{ url_for('register') }}" method="POST">
+                        <fieldset class="form-group">
+                            <div class="form-group">
+                                <label class="form-control-label" for="username">Username</label>
+                                <input class="form-control" type="text" name="username" id="username" required>
                             </div>
-                        {% endif %}
-                    {% endwith %}
 
-                    <!-- messages are not defined at this point!!!
-                        {% for message in messages %} 
-                            <h5 class="font3">
-                            {{ message }}                                                                
-                            </h5>
-                        {% endfor %}
-                    -->
- 
+                            <div class="form-group">
+                                <label class="form-control-label" for="password">Password</label>
+                                <input class="form-control" type="password" name="password" id="password" required>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label" for="confirm-password">Confirm Password</label>
+                                <input class="form-control" type="password" name="confirm-password" id="confirm-password" required>
+                            </div>
+
+                            {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                                <div class="flashes">
+    
+                                    {% for message in messages %} 
+                                        <strong class="flash-color">
+                                            {{ message }}                                                                
+                                        </strong>
+                                    {% endfor %}
+    
+                                </div>
+                            {% endif %}
+                        {% endwith %}
+
+                        </fieldset>
+                        <div class="form-group text-center">
+                            <button class="btn btn-primary" type="submit">Register</button>
+                        </div>
+                        <div class="text-center">
+                            <p>Already have an account? <a href="{{url_for('login')}}">Login Here</a></p>
+                        </div>    
+                    </form>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="input-field text-center font-color col s6">
-                    <i class="material-icons prefix">vpn_key</i>
-                    <input id="password" name="password" type="password" class="validate font-color" placeholder="Password" required>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s6 ">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">
-                        Sign Up
-                        <i class="material-icons right">exit_to_app</i>
-                    </button>
-                </div>
-            </div>
-
-            <div>
-                <a style="text-decoration: none; color: black;" class="font-color link-text" href="{{url_for('login')}}">
-                    <strong>Have an account? Please log in</strong>
-                </a>
-            </div>
-        </form>
-
+        </div>
     </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
-</html>
+
+
+{% endblock %}
