--- a/templates/public/register.html
+++ b/templates/public/register.html
@@ -22,7 +22,7 @@
     <div class="col-12 col-lg-3 text-center">
         <div class="container-fluid center-form">
             <div class="header">
-                <h1>Login</h1>
+                <h1>Sign Up</h1>
             </div>
             <div class="row">
                 <div class="col-12 d-flex justify-content-center text-sm-center text-lg-left">
