--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -69,7 +69,7 @@
                                 <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('activities') }}">Activities for you</a>
+                                <a class="nav-link" href="{{ url_for('manage_activities') }}">Activities Manager</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
