Added Moderator template moderator.html and functions to app.py moderator(), approve(), and reject(). Changed top nav menu in base.html for 'admin' user (aka moderator)

--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -66,10 +66,7 @@
                     {% if session['status'] == 'admin' %}
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('activities') }}">Activities for you</a>
+                                <a class="nav-link" href="{{ url_for('moderator') }}">Moderator Page</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
