--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>	
-<html lang="en">	
+<!DOCTYPE html>
+<html lang="en">
 
-<head>	
+<head>
 
-  <meta charset="utf-8">	
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	
-  <meta name="description" content="">	
-  <meta name="author" content="">	
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>{% block title %}{% endblock %}</title>	
+    <title>{% block title %}{% endblock %}</title>
 
-  <!-- Bootstrap core CSS -->	
-  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">	
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-  <!-- Custom fonts for this template -->	
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">	
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"	
-    rel="stylesheet">	
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+        rel="stylesheet">
 
-  <!-- Custom styles for this template -->	
-  <link href="{{ url_for('static', filename='css/one-page-wonder.min.css') }}" rel="stylesheet">	
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='css/one-page-wonder.min.css') }}" rel="stylesheet">
 
-  <!-- Main CSS -->	
-  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">	
+    <!-- Main CSS -->
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
-</head>	
+</head>
 
-<body>	
+<body>
 
     <!-- Navigation -->
 
@@ -41,44 +41,44 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 {% if not session['username'] %}
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
-                        </li>
-                    </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
+                    </li>
+                </ul>
                 {% else %}
-                    {% if session['status'] == 'user' %}
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('activities') }}">Activities for you</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
-                            </li>
-                        </ul>
-                    {% endif %}
-                    {% if session['status'] == 'admin' %}
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('manage_activities') }}">Activities Manager</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('moderator') }}">Moderator Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
-                            </li>
-                        </ul>
-                    {% endif %}
+                {% if session['status'] == 'user' %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('activities') }}">Activities for you</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+                    </li>
+                </ul>
+                {% endif %}
+                {% if session['status'] == 'admin' %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('manage_activities') }}">Activities Manager</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('moderator') }}">Moderator Page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+                    </li>
+                </ul>
+                {% endif %}
                 {% endif %}
             </div>
         </div>
@@ -87,23 +87,30 @@
 
     {% block header %}{% endblock %}
 
-  <!-- Main content -->	
-<main class="content">	
-  {% block content %}{% endblock %}	
-</main>	
+    <!-- Main content -->
+    <main class="content">
+        {% block content %}{% endblock %}
+    </main>
 
-  <!-- Footer -->	
-  <footer class="py-5 bg-black footer">	
-    <div class="container">	
-      <p class="m-0 text-center text-white small">Copyright &copy; Let's Play 2020</p>	
-    </div>	
-    <!-- /.container -->	
-  </footer>	
+    <!-- Footer -->
+    <footer class="py-5 bg-black footer">
+        <div class="container">
+            <p class="m-0 text-center text-white small">Copyright &copy; Let's Play 2020</p>
+        </div>
+        <!-- /.container -->
+    </footer>
 
-  <!-- Bootstrap core JavaScript -->	
-  <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>	
-  <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>	
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
 
-</body>	
+</body>
 
-</html> 	
+</html>
