--- a/templates/public/activities.html
+++ b/templates/public/activities.html
@@ -15,6 +15,21 @@
 {% endblock %}
 
 {% block content %}
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="flashes">
+
+  {% for message in messages %}
+  <strong class="flash-color">
+    {{ message }}
+  </strong>
+  {% endfor %}
+
+</div>
+{% endif %}
+{% endwith %}
+
 <div class="activities" id="activities">
 
   {% if activities %}
