--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,8 +36,8 @@ body {
     font-weight: 700;
     letter-spacing: .1rem;
     color: rgba(255,255,255,.5);
-    display: block;
-    padding: .5rem 1rem
+    padding: .5rem 1rem;
+    margin: .5rem;
 }
 
 .menu-link:hover {
@@ -45,8 +45,8 @@ body {
     text-decoration: none;
 }
 
-.menu-link-zoom {
-    transform: scale(1.2);
+.nav-item {
+    margin: 0 0.8rem;
 }
 
 /* Banner Styling and Images */
