--- a/templates/public/404.html
+++ b/templates/public/404.html
@@ -2,3 +2,16 @@
 
 {% block title %}Let's Play | Page Not Found{% endblock %}
 
+{% block content %}
+
+<header class="noentry-banner banner-settings text-center text-white">	
+    <div class="banner-content">	
+      <div class="container">	
+        <h1 class="mb-0">Whoops</h1>	
+        <h2 class="mb-0">Somethings gone wrong!</h2>	
+        <a href="{{url_for('index')}}" class="btn btn-primary btn-xl rounded-pill mt-3">Click me to go home</a>	
+      </div>	
+    </div>	
+  </header>	
+
+  {% endblock %}
