--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,6 +84,10 @@ body {
     background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594038361/Hackathon/INdex/mosaic-alien-on-wall-1670977_2_1_boqivg.jpg");
 }
 
+.uploads-banner {
+    background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594210611/Hackathon/INdex/toddler-girl-wearing-white-and-black-sweater-holding-plastic-712141_1_1_ku8i1t.jpg");
+}
+
 .noentry-banner {
     background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594155386/Hackathon/photo-of-lego-toy-miniatures-3806754_1_1_qvuada.jpg");
 }
@@ -117,6 +121,24 @@ body {
 
 .btn-activity-done:hover {
     background-color: #c38d9e;
+}
+
+
+/* Image Upload Page */
+
+.recent-image {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+    width: 25vw;
+    overflow: hidden;
+}
+
+.recent-image img {
+    width: 50%;
+    height: auto;
+    border-radius: 5px;
 }
 
 /* Media Queries */
