--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -67,7 +67,7 @@
                         <a class="menu-link" href="{{ url_for('activities') }}">Activities for you</a>
                     </li>
                     <li class="nav-item">
-                        <a class="menu-link" href="{{ url_for('images') }}">Your images</a>
+                        <a class="menu-link" href="{{ url_for('images') }}">Images</a>
                     </li>
                     <li class="nav-item">
                         <a class="menu-link" href="{{ url_for('logout') }}">Log Out</a>
