--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -51,6 +51,12 @@
                 {% if not session['username'] %}
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
+                        <a class="menu-link" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="menu-link" href="{{ url_for('images') }}">Images</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="menu-link" href="{{ url_for('register') }}">Sign Up</a>
                     </li>
                     <li class="nav-item">
