--- a/templates/public/images.html
+++ b/templates/public/images.html
@@ -4,14 +4,14 @@
 
 {% block header %}
 
-<header class="uploads-banner text-center text-white banner-settings">	
-  <div class="banner-content">	
-    <div class="container">	
-      <h1 class="masthead-heading mb-0">Let's Play</h1>	
-      <h2 class="masthead-subheading mb-0">Check out some recent uploads!</h2>	
-    </div>	
-  </div>	
-</header>	
+<header class="uploads-banner text-center text-white banner-settings">
+    <div class="banner-content">
+        <div class="container">
+            <h1 class="masthead-heading mb-0">Let's Play</h1>
+            <h2 class="masthead-subheading mb-0">Check out some recent uploads!</h2>
+        </div>
+    </div>
+</header>
 
 {% endblock %}
 
@@ -31,18 +31,18 @@
             <div class="image-reactions d-inline-flex">
 
                 {% if session %}
-                <p class="update-reaction p-2"><a
-                        href="{{url_for('update_reaction', image_id = image._id, reaction = "thumbsup")}}">👍</a>:
-                    {{image.reactions.thumbsup}}</p>
-                <p class="update-reaction p-2"><a
-                        href="{{url_for('update_reaction', image_id = image._id, reaction = "heart")}}">😍</a>:
-                    {{image.reactions.heart}}</p>
-                <p class="update-reaction p-2"><a
-                        href="{{url_for('update_reaction', image_id = image._id, reaction = "laugh")}}">😂</a>:
-                    {{image.reactions.laugh}}</p>
-                <p class="update-reaction p-2"><a
-                        href="{{url_for('update_reaction', image_id = image._id, reaction = "happy")}}">😀</a>:
-                    {{image.reactions.happy}}</p>
+                <p class="update-reaction p-2"><button id="thumbsup-{{loop.index}}" image-id="{{image._id}}"
+                        class="thumbsup-link reaction-link">👍</button>:
+                    <span id="thumbsup-num-{{loop.index}}">{{image.reactions.thumbsup}}</span></p>
+                <p class="update-reaction p-2"><button id="heart-{{loop.index}}" image-id="{{image._id}}" class=" heart-link
+                        reaction-link">😍</button>:
+                    <span id="heart-num-{{loop.index}}">{{image.reactions.heart}}</span></p>
+                <p class="update-reaction p-2"><button id="laugh-{{loop.index}}" image-id="{{image._id}}" class=" laugh-link
+                        reaction-link">😂</button>:
+                    <span id="laugh-num-{{loop.index}}">{{image.reactions.laugh}}</span></p>
+                <p class="update-reaction p-2"><button id="happy-{{loop.index}}" image-id="{{image._id}}" class=" happy-link
+                        reaction-link">😀</button>:
+                    <span id="happy-num-{{loop.index}}">{{image.reactions.happy}}</span></p>
                 {% else %}
                 <p class="update-reaction">👍:
                     {{image.reactions.thumbsup}}</p>
